# ela

./: .gitignore  meson.build  readme.md
src/: cela.py  cheb.f  cwrapper.f90  ela.f  ela.h  ela.ipynb  ela.py  elsy1.f  elsy10.f  elsy11.f  elsy12.f  elsy2.f  elsy2a.f  elsy3.f  elsy3a.f  elsy4.f  elsy8.f  elsy9.f  elsyi.f  main.c  main.f90  main.vala  meson.build  test.py
